Add service mongo-express (web ui)
* new service 'mongo-express'
  * web ui to access and manage mongodb
* introduce network 'mongodb'

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,16 @@ services:
       - 27017:27017
     volumes:
       - ./mongo-data/:/data/db
+    networks:
+      - mongodb
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    networks:
+      - mongodb
+
+networks:
+  mongodb:
