--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,23 @@ services:
       - ./mongo-data/:/data/db
     networks:
       - mongodb
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
 
   mongo-express:
     image: mongo-express
+    container_name: mongo-express
     restart: always
+    depends_on: 
+      - mongo
     ports:
       - 8081:8081
     networks:
       - mongodb
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
 
 networks:
   mongodb:
